fix: fix wrap of intereact-with-contract

--- a/pages/tx/styles.module.scss
+++ b/pages/tx/styles.module.scss
@@ -39,6 +39,12 @@
         flex-basis: 168px !important;
       }
     }
+    dd {
+      a {
+        white-space: break-spaces;
+        word-break: break-all;
+      }
+    }
   }
 }
 
